--- a/Clustering/Technical Design/6.WSFC.md
+++ b/Clustering/Technical Design/6.WSFC.md
@@ -36,7 +36,7 @@ MSDTC |  | Responsible for coordinating any distributed transactions.
 The initial cluster configuration will prepare any shared storage available to the cluster nodes, assigning these to the Available Storage group.  As the SQL Server install process is unaware of mount points and the required configuration these disks are to be setup and assigned to the SQL role before starting the SQL Server install process, see Section *Operating System and SQL Disk Configuration* and assign to the SQL role.
 The following screenshot illustrates how the disks should appear in Failover Cluster Manager before proceeding with the SQL install.
 
-![alt-text](https://github.com/SQLHorizons/Build/blob/dev/Clustering/Technical%20Design/Images/ClusterDisks.png "Cluster Disks")
+![alt-text][Cluster Disks]
 
 ## 6.5.   Cluster Networks
 The following table details the function and configuration of each network adapter within the cluster:
@@ -47,3 +47,8 @@ Heartbeat Node A | v-lan-XXX-hb | Cluster Only
 Heartbeat Node B | v-lan-XXX-hb | Cluster Only
 Public Node A | v-lan-XXX | Cluster and Client
 Public Node B | v-lan-XXX | Cluster and Client
+
+
+
+
+[Cluster Disks]: https://github.com/SQLHorizons/Build/blob/dev/Clustering/Technical%20Design/Images/ClusterDisks.png "Cluster Disks"
